[package]
name = "leaflet-bare-example"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"

[dependencies]
leaflet = { path = "../../" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "console"
]